# fast_api_lms

./: .gitignore  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
